--- a/css/styles.css
+++ b/css/styles.css
@@ -191,7 +191,9 @@ h2 {
   flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
+  padding-top: 0;
+  margin-top: -8px;
 }
 
 ul {
